[gd_scene load_steps=5 format=3 uid="uid://e0wsojxw8222"]

[ext_resource type="StyleBox" uid="uid://wxheod2fp41n" path="res://Art/Tres/Panel.tres" id="1_djxk5"]
[ext_resource type="Script" path="res://Scene/ValueContainer/value_container.gd" id="2_djxk5"]
[ext_resource type="Texture2D" uid="uid://dbh6jplv3k5n8" path="res://Art/UI/Button/Button.png" id="3_qje7g"]
[ext_resource type="Texture2D" uid="uid://crmytkwsyo613" path="res://Art/UI/Button/ButtonOff.png" id="4_0go3d"]

[node name="ValueContainer" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -431.0
offset_right = 717.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = ExtResource("1_djxk5")
script = ExtResource("2_djxk5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "见习食客114514"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "时长"

[node name="Button" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_qje7g")
texture_disabled = ExtResource("4_0go3d")

[node name="ProgressBarContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50
alignment = 1

[node name="PowerProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="SpicyProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.0

[node name="SatietyProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/ProgressBarContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.0
